--- a/collector/config.yaml
+++ b/collector/config.yaml
@@ -15,6 +15,9 @@ exporters:
   debug/detailed:
     verbosity: detailed
 
+  debug/basic:
+    verbosity: basic
+
 processors:
   filter:
     error_mode: ignore
@@ -35,3 +38,8 @@ service:
       receivers: [otlp]
       processors: [filter, transform]
       exporters: [debug/detailed]
+
+    metrics/ingest:
+      receivers: [otlp]
+      processors: [transform]
+      exporters: [otlphttp, debug/basic]
