Add filterprocessor to only log messages starting with 'coffeeshop'
(cherry picked from commit 7f2c29c32f2932f94f62fa1fae45db62011d8828)

--- a/collector/config.yaml
+++ b/collector/config.yaml
@@ -15,9 +15,16 @@ exporters:
   debug/detailed:
     verbosity: detailed
 
+processors:
+  filter:
+    error_mode: ignore
+    metrics:
+      metric:
+        - 'IsMatch(metric.name, "coffeeshop.*") == false'
+
 service:
   pipelines:
     metrics/debug:
       receivers: [otlp]
-      processors: []
+      processors: [filter]
       exporters: [debug/detailed]
